(executable
    (name App)
    (package App)
    (preprocess (pps brisk-reconciler.ppx))
    (js_of_ocaml (javascript_files stubs.js))
    (public_name App)
    (libraries
        bigarray
        Revery
            ))

(install
    (section bin)
    (package App)
    (files icon.png circle.png cross.png))
